--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-Flask>=2.0.0
+aiogram==3.1.0a6
+aiohttp>=3.8.0
 python-dotenv>=0.21.0
-python-telegram-bot>=20.3
 requests>=2.28.0
-gunicorn>=20.1.0
-loguru>=0.7.0
