--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-aiogram==3.22.0
-aiohttp>=3.8.0
-python-dotenv>=0.21.0
-requests>=2.28.0
+aiogram==3.20.0
+aiohttp==3.8.4
+python-dotenv==1.0.0
+gunicorn==21.2.0
+
+
